2 ta signal yozildi

--- a/app/templates/app/detail.html
+++ b/app/templates/app/detail.html
@@ -119,7 +119,7 @@
 
                       <div class="form-group mb-3">
                         <label for="image-upload" class="img-label">Upload Image</label>
-                        <input type="file" id="image-upload" name="image" accept="image/*" required>
+                        <input type="file" id="image-upload" name="image" accept="image/*" >
                         <img id="preview-image" class="preview-img" src="#" alt="Preview..." style="display:none;">
 
                       </div>
